# -insureflow-ai

./: .env.example  .gitignore  Dockerfile  README.md  SYSTEM_DESIGN.md  cli.py  docker-compose.bank.standalone.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.json
.github/workflows/: ci.yml  scheduled_evals.yml
deploy/: RYTERA_GLOBAL_URL.md  cloudflare_app_tunnel.sh  docker-compose.bank.yml  public_tunnel.sh
deploy/caddy/: Caddyfile  gen-certs.sh
deploy/cloudflared/: com.rytera.tunnel.plist  config.yml
docs/: BANK_LANDING_ZONE.md  LAUNCH_CHECKLIST.md  architecture.md
evaluations/: __init__.py  cadence.py  cloud_tracker.py  drift.py  giskard_scan.py  golden_dataset.py  hitl_rubrics.py  qa_ground_truth.py  quality_gates.py  ragas_eval.py  release_process.py  report.py  runner.py  scorer.py  trend_store.py
examples/: northwind_acord.xml  northwind_inspection_report.md  northwind_loss_run.md  northwind_sov.md  pacific_coast_acord.xml  pacific_coast_broker_api.json  pacific_coast_inspection_report.md  pacific_coast_loss_run.md  pacific_coast_sov.md  sunrise_artisan_acord.xml  sunrise_artisan_sov.md  veririsk_inspection_report.md  veririsk_iso_loss_run.md  veririsk_principal_background.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AuditTrailViewer.jsx  ConnectorLogo.jsx  InsuranceFileConnector.jsx  InsuranceMemoView.jsx  InsuranceSourceHub.jsx  JobDrawer.jsx  JourneyMiniStrip.jsx  Layout.jsx  LoginModal.jsx  PasswordInput.jsx  SubmissionJourney.jsx  ui.jsx
frontend/src/lib/: api.js  connectorBrands.js  insuranceDocs.js  pipelineJourney.js
frontend/src/pages/: AuthorityMatrix.jsx  BrokerStatus.jsx  EvalTrends.jsx  Insurance.jsx  Integrations.jsx  Lending.jsx  MarketAdmin.jsx  Mortgage.jsx  OverrideAnalytics.jsx  Overview.jsx  Portfolio.jsx  Queue.jsx  Registry.jsx  RenewalDashboard.jsx  Settings.jsx  System.jsx  Webhooks.jsx  Workflow.jsx
infra/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
insureflow/: exceptions.py
insureflow/agents/: extraction_agent.py  loss_run_analyst.py  orchestrator.py  react_agent.py  uw_decision_agent.py
insureflow/audit/: __init__.py
insureflow/graph/: __init__.py  builder.py  nodes.py  state.py
insureflow/ingestion/: chunker.py  classifier.py  loss_run_parser.py
insureflow/llm/: __init__.py  main.py  prompts.py
insureflow/mcp/: __init__.py  __main__.py
insureflow/models/: __init__.py  audit.py
insureflow/provenance/: __init__.py  trust_scorer.py
insureflow/rag/: rag_agent.py  vector_store.py
insureflow/reconciliation/: discrepancies.py  engine.py
insureflow/storage/: __init__.py
legal/: DPA_TEMPLATE.md  PRIVACY_POLICY_TEMPLATE.md  SOC2_QUESTIONNAIRE.md  TRADEMARK_NOTICE.md
scripts/: build_linkedin_deck.py  check_health_100.py  e2e_test.py  init_db.sql
src/insureflow/: __init__.py  api.py  cli.py  config.py  exceptions.py  pipeline.py
src/insureflow/agents/: __init__.py  (+20 more)
tests/: conftest.py  golden_mortgage_outcomes.json  test_acord_parser.py  test_adversarial.py  test_adversarial_breakage.py  test_agent_perf.py  test_agents.py  test_bank_security.py  test_cloud_tracking.py  test_document_analytics.py  test_drift.py  test_e2e.py  test_entities.py  test_eval_cadence.py  test_gateway.py  test_golden_inventory.py  test_governance.py  test_health.py  test_hitl_eval.py  test_ingestion_parsers.py  test_insurance_production.py  test_knowledge.py  test_knowledge_graph_rag.py  test_lending.py  test_mcp_server.py  test_ml.py  test_mortgage.py  test_mortgage_infra.py  test_oracles.py  test_pipeline.py  test_pipeline_graph.py  test_pipeline_metrics.py  test_production_integrations.py  test_provenance.py  test_quality_gates.py  test_rag_rerank_fallback.py  test_reconciliation.py  test_release_process.py  test_source_normalizers.py  test_trend_store.py  (+1 more)
(+428 files in other folders)
